Fix spacing and line-height in subscription input styles

--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -25,7 +25,7 @@ align-items: flex-start;
 .subscribe-input-control {
     display: flex;
     flex-direction: column;
-    gap: 23px;
+    gap: 24px;
     
     margin-bottom: 16px;
 }
@@ -37,7 +37,7 @@ align-items: flex-start;
     
     font-size: 16px;
     font-weight: 400;
-    line-height: 150%;
+    line-height: 1.375;
 
     background: rgba(255, 255, 255, 0);
     border: 1px solid var(--color-scheme-1-border);
